src/sections/common/topButtons.css
#top-buttons-container {
  display: flex;
  width: -webkit-fill-available;
  position: fixed;
  justify-content: space-between;
  align-items: center;
}

.icon-button {
  display: flex;
  width: 60px;
  height: 60px;
  align-items: center;
  justify-content: center;
  font-size: 25px;
  color: white;
  cursor: pointer;
}

.icon-button svg {
  box-shadow: var(--neon-shadow);
}

#whatsapp-icon {
  border-radius: 50%;
}

#instagram-icon {
  border-radius: 8px;
}

